# telemetry-codegen

./: FrontLights.cpp  Makefile  README.md  config.yml  pyproject.toml
.github/workflows/: test.yml
datamodule/: generate.py
datamodule/cpp/: DataModuleInfo.hpp  module.cpp  module.h
tests/: test_goldens.py
tests/goldens/16bit/: config.yml  test.cpp
tests/goldens/8bit/: config.yml  test.cpp
tests/goldens/floats/: config.yml  test.cpp
tests/headers/: DataModule.hpp
